examples/expected/check_invalid_safe_misinformation_base.txt
error[E3001]: invalid constraint 'misinformation' for base type F64
help: supported constraints are !nan and !inf on f64 values, and !hate_speech and !misinformation on string values
  --> examples/invalid_safe_misinformation_base.tp:2:38
   |
 2 | 	let x: Safe<f64, !misinformation> = 1.0;
   |                                      ^^^
